<resources>
    <string name="app_name">WordPress News App</string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- end of the ad section -->


    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/helpfulappsbd/</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCqpLWjZUbFca3ULvpiRuLcw</string>
    <string name="twitter_user_id">twitter://user?user_id=716462892967538689</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/taufiqur59</string>
    <string name="google_plus_url">https://plus.google.com/+TAUFIQURRAHMANNISHAT</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://docs.google.com/document/d/1-UJjnUSd6f82gNvwZznTDiDSYfnHX2fYQpjpmBG_RNg/edit?usp=sharing</string>
    <string name="privacy_url">https://docs.google.com/document/d/1pfm5xgtbXW4Twxbh_8Q_3-75QoO5KySZkysli3zE0gI/edit?usp=sharing</string>
    <string name="faq_url">https://docs.google.com/document/d/122500Gtso7Fj3VhMB5TNKaELZrfR95urBNJczI63DFQ/edit?usp=sharing</string>

    <!-- about developer text  -->
    <string name="developer_name">Taufiqur Rahman Nishat</string>
    <string name="developer_detail">Entrepreneur, Bangladesh</string>
    <string name="developer_message">If you like this app, please give it a good rating, share with friends and show your support to us.</string>

    <!-- developer page: replace the developer id by yours -->
    <string name="developer_page">market://dev?id=9082460539100844090</string>
    <string name="alternate_dev_page">https://play.google.com/store/apps/dev?id=9082460539100844090</string>


    <string name="site_menu_home">Home</string>
    <string name="site_menu_category_list">Categories</string>
    <string name="site_menu_book">Bookmarks</string>
    <string name="site_menu_copy">Copy</string>
    <string name="site_menu_share">Share</string>
    <string name="site_menu_delete_all">Delete All</string>
    <string name="site_menu_read_article">Read Article</string>
    <string name="site_menu_stop_reading">Stop Reading</string>
    <string name="site_menu_copy_text">Copy Texts</string>
    <string name="site_menu_share_post">Share Post</string>
    <string name="site_menu_download">Download Image</string>
    <string name="site_menu_set">Set as Wallpaper</string>
    <string name="site_menu_new_comment">New Comment</string>
    <string name="delete_all_fav_item">Do you want to Delete all the Bookmarked items?</string>
    <string name="delete_fav_item">Do you want to remove this item from the Bookmark list?</string>
    <string name="social">Social</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>


    <string name="others">Others</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Developer</string>
    <string name="exit">Exit</string>
    <!-- end of the site configuration section-->

    <string name="search">Search</string>

    <string name="rate_title">Rate This App</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it 5 stars?
    It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_positive">rate now</string>
    <string name="rate_remind_later">Later</string>
    <string name="rate_never">No, Thanks</string>
    <string name="empty_result">No data!</string>
    <string name="connect">Connect</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="tapAgain">Tap again to exit!</string>
    <string name="permission_not_granted">Permission not granted!</string>
    <string name="load_more">Loading more items, please wait...</string>
    <string name="default_string">Default</string>
    <string name="latest_post">Latest</string>
    <string name="featured_post">Featured</string>
    <string name="details_text">Details</string>
    <string name="comment_list">Comments</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_comment">Comment</string>
    <string name="write_comment">Write a Comment...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="successful_message">Comment is successful!</string>
    <string name="error_message">Error occurred! Try again!</string>
    <string name="hash_tag">#</string>
    <string name="featured_posts">|Featured Posts</string>
    <string name="recent_posts">|Recent Posts</string>
    <string name="view_all">VIEW ALL</string>
    <string name="featured">Featured Posts</string>
    <string name="recent">Recent Posts</string>
    <string name="tts_wait_msg">This article will be read in short. Please wait a while...</string>
    <string name="tts_install_msg">Please install Language package from here</string>
    <string name="related_posts">|Related Posts</string>
    <string name="view_comments">View All Comments (%d)</string>
    <string name="write_a_comment">Write a new Comment</string>


    <string name="share_text">\nInstall App from:</string>
    <string name="send_to">Send To: </string>
    <string name="copy_to_clipboard">Copied to Clipboard!</string>
    <string name="added_to_bookmark">This topic is added to Bookmark list!</string>
    <string name="removed_from_book">This topic is removed from Bookmark List!</string>
    <string name="wallpaper_set">Wallpaper successfully set!</string>
    <string name="wallpaper_set_failed">Failed to set Wallpaper!</string>
    <string name="wallpaper_download">Image successfully downloaded!</string>
    <string name="wallpaper_download_failed">Failed to download Image!</string>
    <string name="delete_all_notification">Do you want to Delete all the Notifications?</string>

    <string name="close_prompt">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed">Failed</string>
    <string name="no_internet">No internet connection is available!</string>

    <string name="set_wallpaper">Set Wallpaper...</string>
    <string-array name="set_wallpaper_options">
        <item>Home Screen</item>
        <item>Lock Screen</item>
        <item>Both</item>
    </string-array>
    <string name="lock_screen_set">Lockscreen wallpaper set!</string>
    <string name="home_set">Homescreen wallpaper set!</string>
    <string name="both_set">Home and lockscreen wallpaper set!</string>


    <string name="matches">matches</string>
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="read_post">Read Post</string>
    <string name="notification_title">Notification title: </string>
    <string name="notification_details">Notification details: </string>


    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summ">Turn on/off notification</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Text size</string>
    <string name="select_size">Select text size</string>

    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>
    <string name="about_us">About Us</string>

</resources>