<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/site_menu_category_list" />

    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/action_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube" />

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook" />

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter" />

            <item
                android:id="@+id/action_google_plus"
                android:icon="@drawable/ic_google_plus"
                android:title="@string/google_plus" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_author"
                android:title="@string/about_us" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate" />

        </menu>
    </item>

</menu>
